# v-kafka

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
examples/: conn_test.rs  phase3_test.rs  phase4_test.rs
src/: app.rs  lib.rs  main.rs
src/config/: cluster.rs  mod.rs  profile.rs
src/decoder/: avro.rs  json.rs  mod.rs  protobuf.rs  text.rs
src/events/: handler.rs  mod.rs
src/kafka/: admin.rs  client.rs  consumer.rs  consumer_group.rs  metadata.rs  mod.rs  producer.rs  schema_registry.rs
src/ui/: layout.rs  mod.rs  theme.rs
src/ui/components/: acl_view.rs  broker_info.rs  cluster_form.rs  cluster_list.rs  consumer_groups.rs  dialog.rs  help.rs  message_detail.rs  message_list.rs  mod.rs  partition_view.rs  producer_form.rs  schema_registry.rs  status_bar.rs  title_bar.rs  topic_list.rs
