[package]
name = "v-kafka"
version = "0.1.0"
edition = "2021"
description = "A terminal UI Kafka client"
license = "MIT"
repository = "https://github.com/baiyulong/v-kafka"

[[bin]]
name = "vk"
path = "src/main.rs"

[dependencies]
# TUI
ratatui = "0.28"
crossterm = "0.28"

# Kafka
rdkafka = { version = "0.36", features = ["cmake-build", "ssl", "gssapi", "sasl"] }

# Async
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Avro
apache-avro = "0.16"

# Schema Registry
schema_registry_converter = { version = "4", features = ["avro"] }

# Protobuf
prost = "0.12"
prost-types = "0.12"

# Utilities
anyhow = "1"
thiserror = "1"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dirs = "5"
uuid = { version = "1", features = ["v4"] }

ureq = { version = "2", features = ["json"] }

[lib]
name = "v_kafka"
path = "src/lib.rs"

